<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_small"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_medium">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_theme_1"
            android:orientation="horizontal"
            android:padding="@dimen/margin_small">

            <TextView
                android:id="@+id/txtCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="@dimen/margin_small"
                android:gravity="left|center_vertical"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_title"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/comment"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_small"
                android:gravity="right|center_vertical"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_title"
                android:textStyle="bold" />

        </RelativeLayout>
        <EditText
            android:id="@+id/etxCommentDesrscriptionssc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:background="@drawable/edittext_bottom_line_black"
            android:drawablePadding="@dimen/margin_tiny"
            android:hint="@string/edittext_hint_description"
            android:inputType="text"
            android:maxLines="1"
            android:paddingBottom="@dimen/margin_edittext_bottom"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_size_edittext" />
    </LinearLayout>
</LinearLayout>