<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/margin_medium"
        android:paddingRight="@dimen/margin_medium"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_medium"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etxSigninId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/edittext_bottom_line_white"
                android:drawableLeft="@drawable/mobilenumber"
                android:drawablePadding="@dimen/margin_tiny"
                android:hint="@string/edittext_hint_mobile_number"
                android:inputType="number"
                android:maxLines="1"
                android:paddingBottom="@dimen/margin_edittext_bottom"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/font_size_edittext" />

            <EditText
                android:id="@+id/etxPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/edittext_bottom_line_white"
                android:drawableLeft="@drawable/lock_password"
                android:drawablePadding="@dimen/margin_tiny"
                android:hint="@string/edittext_hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="@dimen/margin_edittext_bottom"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/font_size_edittext" />

            <TextView
                android:id="@+id/txtSignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/button_background_green"
                android:gravity="center"
                android:padding="@dimen/margin_button"
                android:text="@string/button_signin"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_button"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

    <include layout="@layout/progressbar" />
</RelativeLayout>
